--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Az Xposed keretrendszer %d+ nincs telepítve</string>
     <string name="app_notenabled">Az XPrivacy nincs engedélyezve az Xposed telepítőben</string>
     <string name="app_wrongandroid">Csak Android 4.0 felett</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">XPrivacy verzió: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed keretrendszer verzió: %d</string>
