--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Xposed framework versiyon %d+ yüklü değil.</string>
     <string name="app_notenabled">XPrivacy, Xposed yükleyicisinden etkinleştirilmedi.</string>
     <string name="app_wrongandroid">Sadece Android 4.0 ve üstünde kullanılabilir.</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">XPrivacy versiyon: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versiyon: %d</string>
