--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">La versió %d+ d\'Xposed framework no està instal·lada</string>
     <string name="app_notenabled">XPrivacy no està habilitat a l\'instal·lador d\'Xposed</string>
     <string name="app_wrongandroid">Només per a Android versió 4.0+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">Versió d\'XPrivacy: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
