--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Xposed framework wersja %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
     <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
