--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Не установлен Xposed framework версии %d+</string>
     <string name="app_notenabled">Модуль XPrivacy не активирован в Xposed installer</string>
     <string name="app_wrongandroid">Только для Android версии 4.0 и выше</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
