--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Verzia Xposed frameworku %d+ nie je nainštalovaná</string>
     <string name="app_notenabled">Modul XPrivacy nie je aktivovaný v Xposed Inštalátori</string>
     <string name="app_wrongandroid">Len pre Android 4.0+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">Verzia XPrivacy: %s (%d)</string>
     <string name="app_description">Správca súkromia</string>
     <string name="app_xversion" formatted="false">Verzia Xposed frameworku: %d</string>
