--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_notxposed" formatted="false">Xposed framework верзија %d+ није инсталирана</string>
     <string name="app_notenabled">XPrivacy није омогућен у Xposed инсталатору</string>
     <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">XPrivacy верзија: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework верзија: %d</string>
