--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_notxposed" formatted="false">Xposed framework version %d+ is not installed</string>
     <string name="app_notenabled">XPrivacy is not enabled in the Xposed installer</string>
     <string name="app_wrongandroid">Only for Android version 4.0.3+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_wrongenabler" translatable="false">Please upgrade the Pro enabler</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
