--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0+</string>
     <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
-    <string name="app_description">The ultimate privacy manager</string>
+    <string name="app_description">Kompleksowy menadżer prywatności</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Log dostępu do danych</string>
@@ -38,10 +38,10 @@
     <string name="menu_applications">Wybierz dozwolone aplikacje</string>
     <string name="menu_contacts">Wybierz dozwolone kontakty</string>
     <string name="menu_tutorial">Samouczek</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_aborted">Aborted</string>
+    <string name="menu_exclude">Wyklucz</string>
+    <string name="menu_close">Zamknij</string>
+    <string name="msg_abort">Przerywanie</string>
+    <string name="msg_aborted">Przerwano</string>
     <string name="msg_new">Nowa aplikacja</string>
     <string name="msg_update">Aktualizacja</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
@@ -59,13 +59,13 @@
     <string name="msg_random_access">Losuj podczas dostępu</string>
     <string name="msg_random_boot">Losuj po restarcie</string>
     <string name="msg_restart">Wymagany restart aplikacji</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_service">Update service running</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
-    <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
+    <string name="msg_register">Proszę zarejestruj swoje urządzenie</string>
+    <string name="msg_registered">Sprawdź swój e-mail aby aktywowac urządzenie</string>
+    <string name="msg_service">Usługa aktualizacji pracuje</string>
+    <string name="msg_migrating" formatted="false">Migrowanie %s</string>
+    <string name="msg_randomizing" formatted="false">Losowanie %s</string>
+    <string name="msg_upgrading" formatted="false">Aktualizacja %s</string>
+    <string name="msg_support_info">Wewnętrzna kontrola się nie powiodła. Czy chcesz wysłać informacje do supportu?</string>
     <string name="msg_first"><b>Dołożyliśmy wszelkich starań podczas programowania i testów XPrivacy.
     Jednak nie możemy zagwarantować, że będzie on działać bezbłędnie na każdym urządzeniu oraz z każdą aplikacją.
 \n\nUżywasz go całkowicie na własne ryzyko.</b>\n\nZobacz też licencję:</string>
@@ -123,14 +123,14 @@
     <string name="settings_general">Ogólne</string>
     <string name="settings_fake_data">Fałszowanie danych</string>
     <string name="settings_notify">Aktualizuj powiadomienia</string>
-    <string name="settings_log">Debug log (wymaga restartu)</string>
+    <string name="settings_log">Log debugowania (wymaga restartu)</string>
     <string name="settings_expert">Tryb eksperta</string>
     <string name="settings_dangerous">Ogranicz niebezpieczne funkcje</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Eksperymentalne funkcje (wymaga restartu)</string>
-    <string name="settings_https">Use secure connections</string>
-    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
-    <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="settings_https">Użyj bezpiecznych połaczeń</string>
+    <string name="settings_syscomponents">Ogranicz komponenty systemowe (Android) (wymaga restartu)</string>
+    <string name="settings_usagedata">Pokaż użycie danych przez aplikacje (wymaga restartu)</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">ma dostęp do internetu</string>
     <string name="help_granted">ma dostęp do uprawnień Androida</string>
