--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,14 +1,14 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">Xposed framework wersja %d+ nie jest zainstalowany</string>
+    <string name="app_notxposed" formatted="false">Framework Xposed w wersji %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
-    <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0+</string>
-    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
+    <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0.3+</string>
+    <string name="app_incompatible" formatted="false">XPrivacy jest niekompatybilne z %s</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_description">Kompleksowy menadżer prywatności</string>
-    <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
+    <string name="app_xversion" formatted="false">Wersja frameworka Xposed: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Log dostępu do danych</string>
+    <string name="menu_usage">Dostęp do danych</string>
     <string name="menu_refresh">Odśwież</string>
     <string name="menu_settings">Ustawienia</string>
     <string name="menu_template">Szablon</string>
@@ -126,7 +126,7 @@
     <string name="settings_log">Log debugowania (wymaga restartu)</string>
     <string name="settings_expert">Tryb eksperta</string>
     <string name="settings_dangerous">Ogranicz niebezpieczne funkcje</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
+    <string name="settings_confidence">Maksymalna wartość wspołczynnika zaufania</string>
     <string name="settings_experimental">Eksperymentalne funkcje (wymaga restartu)</string>
     <string name="settings_https">Użyj bezpiecznych połaczeń</string>
     <string name="settings_syscomponents">Ogranicz komponenty systemowe (Android) (wymaga restartu)</string>
